# rocm-libraries

./: Jenkinsfile  README.md  codecov.yml  requirements.txt
.azuredevops/: hipblas-common.yml  hipblaslt.yml  hipcub.yml  hipfft.yml  hiprand.yml  rocblas.yml  rocfft.yml  rocm_ci_caller.yml  rocprim.yml  rocrand.yml  rocsolver.yml  rocthrust.yml
.github/: repos-config.json
.github/scripts/: pr_merge_sync_patches.py  therock_matrix.py
.github/workflows/: issue-import.yml  pr-import.yml  pr-merge-sync-patches.yml  pre-formatting.yml  therock-ci-linux.yml  therock-ci.yml
clients/: CMakeLists.txt
clients/gtest/: asum_gtest.yaml  copy_gtest.yaml  dgmm_gtest.yaml  gbmv_gtest.yaml  geam_gtest.yaml  gemmt_gtest.yaml  gemv_gtest.yaml  ger_gtest.yaml  hbmv_gtest.yaml  hemm_gtest.yaml  hemv_gtest.yaml  her2_gtest.yaml  her2k_gtest.yaml  her_gtest.yaml  herk_gtest.yaml  herkx_gtest.yaml  hpmv_gtest.yaml  iamax_iamin_gtest.yaml  nrm2_gtest.yaml  rot_gtest.yaml  sbmv_gtest.yaml  scal_gtest.yaml  spmv_gtest.yaml  swap_gtest.yaml  symm_gtest.yaml  symv_gtest.yaml  syr2_gtest.yaml  syr2k_gtest.yaml  syr_gtest.yaml  syrk_gtest.yaml  syrkx_gtest.yaml  tbmv_gtest.yaml  tbsv_gtest.yaml  tpmv_gtest.yaml  tpsv_gtest.yaml  trmm_gtest.yaml  trmv_gtest.yaml  trsm_gtest.yaml  trsv_gtest.yaml
clients/include/: utility.hpp
clients/tests/: gtest_main.cpp  multi_device_test.cpp
docs/sphinx/: requirements.txt
projects/hipblas-common/: CMakeLists.txt  rmake.py
projects/hipblas-common/tests/: CMakeLists.txt  main.cpp
projects/hipblaslt/: CHANGELOG.md  CMakeLists.txt  README.md
(+234 files in other folders)
